--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                   <div  class=" card col s12 m10 l6 push-l3 push-m1">
                       <div class="borde">
                           <a href="pag/primera.html"> <div class="chip">
-                              <img src="assets/img/captura.png" alt="Contact Person">
+                              <img src="assets/img/captura.PNG" alt="Contact Person">
                               Nicolás Suárez
                             </div></a>
                       </div>
@@ -204,7 +204,7 @@
                   <div  class=" card col s12 m10 l6 push-l3 push-m1">
                       <div class="borde">
                         <a href="pag/primera.html"> <div class="chip">
-                          <img src="assets/img/captura.png" alt="Contact Person">
+                          <img src="assets/img/captura.PNG" alt="Contact Person">
                           Nicolás Suárez
                             </div></a>
                       </div>
@@ -226,7 +226,7 @@
                   <div  class=" card col s12 m10 l6 push-l3 push-m1">
                       <div class="borde">
                         <a href="pag/primera.html"> <div class="chip">
-                          <img src="assets/img/captura.png" alt="Contact Person">
+                          <img src="assets/img/captura.PNG" alt="Contact Person">
                           Nicolás Suárez
                             </div></a>
                       </div>
@@ -266,7 +266,7 @@
                             <div class=" contenido_a_mostrar"  id="inlove">
                             </div>
                           <i class="material-icons cursor1">camera</i>
-                          <span class="card-title">Nicolás Suárez</span>
+                          <span class="card-title">Jackson Sanchez</span>
                         </div>
                   </div>
               </div>
