--- a/pag/primera.html
+++ b/pag/primera.html
@@ -58,7 +58,7 @@
             <section>
           <div class="row">
             <div class="col l6 s12 m10 push-m1 push-l2 chip3 ">
-                 <img class="chip2 " src="../assets/img/captura.png" alt="Contact Person">
+                 <img class="chip2 " src="../assets/img/captura.PNG" alt="Contact Person">
                  <p class="ti_per">nicolassuarez0998</p>
                  <p class="ti_per1">Nicolás Suárez <strong>
                 Sub sole.</strong></p>
